# UniversalCopilot

./: .gitignore  BUILD_INSTRUCTIONS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  OLLAMA_SETUP.md  README.md  README_OLLAMA.md  WinEnum.cs  check_config.ps1  focus_and_simulate.ps1  install.bat  installer.wxs  make_selfextract.ps1  package_release.ps1  portable_install.ps1  portable_uninstall.ps1  run_and_collect.ps1  simulate_demo.ps1  start_oneclick.bat  start_with_env.ps1  uninstall.bat  uninstall_launcher.bat  write_config.ps1
.cargo/: config.toml
dist_build/: install.sed  install_launcher.bat  portable_install.ps1  run_with_env.ps1  start-minimized.vbs  start.bat  test.sed  test2.sed  uninstall.sed  uninstall_launcher.bat
installer/: README.md  UniversalCopilot.iss  build.ps1
installer/portable/: README-portable.md  build-zip.ps1  first_run.ps1
src/: caret.rs  chatbot.rs  context.rs  infer.rs  keyboard.rs  llm.rs  logger.rs  main.rs  overlay.rs
