[package]
name = "universal_copilot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
once_cell = "1.20"
parking_lot = "0.12"
windows = { version = "0.48", features = [
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
	"Win32_Graphics_Gdi",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_System_LibraryLoader",
	"Win32_System_Threading",
	"Win32_System_DataExchange",
	"Win32_System_Memory"
] }
futures-util = "0.3"
chrono = "0.4"
base64 = "0.21"
